docs: updated swagger examples.
